--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
 		"rimraf": "^2.6.2"
 	},
 	"dependencies": {
+		"bcrypt": "5.0.1",
 		"cookie-parser": "^1.4.3",
 		"dotenv": "^5.0.1",
 		"express": "^4.16.3",
 		"express-winston": "^2.5.1",
+		"jsonwebtoken": "8.5.1",
+		"lodash": "4.17.21",
 		"mongoose": "^5.0.17",
 		"mongoose-bcrypt": "^1.5.1",
 		"mongoose-string-query": "^0.2.5",
